Enable continue-on-error

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,7 @@ jobs:
       - name: Run WDIO Tests
         run: |
           npx wdio run ./allwyn.wdio.conf.js
+        continue-on-error: true
 
       # -----------------------------
       # Generate Allure Report
