--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,84 +12,59 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # -----------------------------
-      # Checkout repository
-      # -----------------------------
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # -----------------------------
-      # Setup Node.js
-      # -----------------------------
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # -----------------------------
-      # Install Dependencies
-      # -----------------------------
       - name: Install dependencies
         run: npm ci
 
-      # -----------------------------
-      # Run WebDriverIO Tests
-      # -----------------------------
+      # ✅ Continue even if tests fail (UI bug safe)
       - name: Run WDIO Tests
-        run: |
-          npx wdio run ./allwyn.wdio.conf.js
+        run: npx wdio run ./allwyn.wdio.conf.js
         continue-on-error: true
 
-      # -----------------------------
-      # Generate Allure Report
-      # -----------------------------
       - name: Generate Allure Report
         run: |
           npx allure generate allure-results --clean -o allure-report
 
-      # -----------------------------
-      # Upload Allure Raw Results
-      # -----------------------------
       - name: Upload Allure Results
         uses: actions/upload-artifact@v4
         with:
           name: allure-results
           path: allure-results/
 
-      # -----------------------------
-      # Upload Allure HTML Report
-      # -----------------------------
       - name: Upload Allure HTML Report
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
           path: allure-report/
 
+
   deploy-allure:
     needs: test
     runs-on: ubuntu-latest
 
     steps:
-      # -----------------------------
-      # Checkout (needed for deployment)
-      # -----------------------------
+      # ✅ Required for repo metadata
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # -----------------------------
-      # Download HTML Allure Report
-      # -----------------------------
+      # ✅ Download the generated Allure HTML report
       - name: Download Allure Report Artifact
         uses: actions/download-artifact@v4
         with:
           name: allure-report
-          path: ./allure-report
+          path: ./public   # ✅ IMPORTANT: Pages wants index.html at root
 
-      # -----------------------------
-      # Deploy to GitHub Pages
-      # -----------------------------
+      # ✅ Deploy Allure report to GitHub Pages
       - name: Deploy Allure Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./allure-report
+          publish_dir: ./public
+          force_orphan: true  # ✅ Ensures README.md is removed and clean deploy
